--- a/ty_22_Web_Tech_Folder/Assignment_1/Set_A/A1SetAQ2.html
+++ b/ty_22_Web_Tech_Folder/Assignment_1/Set_A/A1SetAQ2.html
@@ -8,7 +8,7 @@
     <input type=text name=fsize><br>
     YOUR FONT COLOUR:
     <input type=text name=fcolor><br>
-    YOUR BACKGORUND COLOUR:
+    YOUR BACKGROUND COLOUR:
     <input type=text name=bcolor><br>
     <input type="submit" value="submit"><br>
 </form>
